# 911-deal

./: .env.example  .gitignore  911_deal_radar_prd_and_engineering_design.md  Dockerfile  docker-compose.yml  execution_plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8034207b7c67_add_email_captures.py  93593f087541_initial_schema.py  c3e1d2a7f501_add_scrape_events.py
app/: comp_matcher.py  config.py  database.py  listing_parser.py  main.py  models.py  normalizer.py  report_generator.py  schemas.py  valuation_service.py
app/routers/: admin.py  api.py  public.py
app/scrapers/: bat.py  cargurus.py  cnb.py  registry.py
app/templates/: base.html  index.html  report.html  submit.html
app/templates/admin/: listing_edit.html  listings.html
memory/: MEMORY.md  project_progress.md
scripts/: ingest_bat.py  ingest_cargurus.py  refresh.py
